--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "bf-interpreter"
 version = "0.1.0"
 edition = "2021"
 authors = ["Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
-license = "MIT OR Apache-2.0"
+license = "MIT"
 description = "Brainfu*k interpreter and REPL written in Rust"
 repository = "https://github.com/anas-elgarhy/bf-interpreter"
 readme = "README.md"
