--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,6 @@ exclude = [
 clap = { version = "4.0.10", features = ["derive", "color", "cargo"] }
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
+
+[dev-dependencies]
+pretty_assertions = "1.3.0"
