--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ exclude = [
 clap = { version = "4.0.10", features = ["derive", "color", "cargo"] }
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
+colored = "2.0.0"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
