--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ clap = { version = "4.0.10", features = ["derive", "color", "cargo"] }
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
 colored = "2.0.0"
+no-panic = "0.1.16"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
