--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,11 @@ exclude = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.10", features = ["derive", "color", "cargo"] }
+clap = { version = "4.0.14", features = ["derive", "color", "cargo"] }
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
 colored = "2.0.0"
-no-panic = "0.1.16"
+# no-panic = "0.1.16"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
