--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ keywords = [
     "interpreter",
     "repl",
     "bf",
-    "bf-interpreter",
     "bf-repl",
     "brainfuck-interpreter",
     "brainfuck-repl",
@@ -34,7 +33,7 @@ exclude = [
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.0.14", features = ["derive", "color", "cargo"] }
+clap = { version = "4.0.14", features = ["derive", "color", "cargo", "wrap_help", "suggestions"] }
 log = "0.4.17"
 pretty_env_logger = "0.4.0"
 colored = "2.0.0"
