--- a/archpackage/PKGBUILD
+++ b/archpackage/PKGBUILD
@@ -38,3 +38,4 @@ package() {
   cd "$pkgname-$pkgver"
   sudo install -Dm0755 -t "/usr/bin/" "target/release/$pkgname"
 }
+sha256sums=('6cbc8ec926988fee38eae1f43b63c8004b4a8e775bb597b14dd2be1c8ff3a1ab')
